# AITH-ML-Python

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
configs/: models.json
docker/frontend/: Dockerfile
docker/model_service/: Dockerfile
docker/web_service/: Dockerfile
monitoring/grafana/: dashboard.json
monitoring/prometheus/: prometheus.yml
notebooks/: test_gpt_generation.ipynb  train_gpt.ipynb
src/frontend/: app.py
src/model_service/: main.py
src/model_service/core/models/: __init__.py  i_inference.py  i_model_handler.py
src/model_service/infrastructure/models/: inference.py  model_handler.py
src/web_service/: app.py  utils.py
src/web_service/core/entities/: user.py
src/web_service/core/message_brokers/: i_message_broker.py
src/web_service/core/repositories/: i_user_repository.py
src/web_service/core/repositories/dto/: __init__.py  create_user_dto.py  generate_text_dto.py  login_user_dto.py  register_user_dto.py  update_user_balance_dto.py
src/web_service/core/services/: model_service.py  user_service.py
src/web_service/core/services/interfaces/: __init__.py  i_model_service.py  i_user_service.py
src/web_service/infrastructure/controllers/: auth_controller.py  dependencies.py  model_controller.py  routers.py  user_controller.py
src/web_service/infrastructure/db/entities/: __init__.py  user_entitiy.py
src/web_service/infrastructure/db/mappers/: user_mapper.py
src/web_service/infrastructure/db/mappers/interfaces/: __init__.py
src/web_service/infrastructure/db/repositories/: user_repository.py
src/web_service/infrastructure/message_brokers/: rabbitmq_broker.py
