[[tool.poetry.source]]
name = "cpu_versions"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry]
name = "ml-python project"
version = "0.1.0"
description = ""
authors = ["khrstln <Khrstln@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
numpy = "^2.2.5"
torch = { version = "2.5.1+cpu", source = "cpu_versions" }
torchvision = { version = "0.20.1+cpu", source = "cpu_versions" }
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
streamlit = "^1.45.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20250328"
streamlit-cookies-controller = "^0.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.1.0"
ipykernel = "^6.29.5"
transformers = "^4.51.3"
pika = "^1.3.2"
pydantic-settings = "^2.9.1"
prometheus-fastapi-instrumentator = "^7.1.0"
python-dotenv = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.5"
pytest-cov = "6.0.0"
pytest-asyncio = "0.25.3"
mypy = "1.15.0"
flake8 = "7.1.2"
tox = "4.24.2"
flake8-pyproject = "1.2.3"
isort = "6.0.1"
black = "25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.mypy]
mypy_path = "qa_xpath_generation"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.flake8]
ignore = ['E231', 'E241', 'W503']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true
